# anima-app

./: .gitignore  NOTICE.md  README.md  Run-AnimaAPP-GUI-DryRun.cmd  Run-AnimaAPP-GUI.cmd  Run-AnimaAPP-ReleaseSmoke.cmd  pyproject.toml
docs/: ACCEPTANCE.md  IMPROVEMENT_PLAN.md  PACKAGING_PLAN.md  REFERENCES.md  RELEASE_CHECKLIST.md
docs/superpowers/plans/: 2026-06-17-auto-queue.md  (+3 more)
scripts/: package_dry_run.py  release_smoke.py  smoke_anima_app.py
src/anima_app/: __init__.py  assets.py  cli.py  comfy_runtime.py  config.py  defaults.py  gpu.py  health.py  manifests.py  output_names.py  png_metadata.py  requests.py  server.py  updates.py  wildcards.py
tests/: test_assets.py  test_cli.py  test_comfy_runtime.py  test_comfy_t2i.py  test_config.py  test_face_detailer.py  test_gpu.py  test_launchers.py  test_output_names_and_metadata.py  test_package_dry_run.py  test_release_smoke.py  test_requests_and_manifests.py  test_server.py  test_smoke_anima_app.py  test_updates.py  test_wildcards.py
wildcards/: README_IMPACT_PACK.md  a1float.txt  atelier.txt  background.txt  bluearchive.txt  codex_smoke.txt  da.txt  digimongirls.txt  dress.txt  dress2.txt  dress3.txt  fabe.txt  ff.txt  genshin.txt  genshinboy.txt  girlsundpanzer.txt  gochiusa.txt  loli.txt  lovelive.txt  lovelivesunshine.txt  nikke.txt  original_character.txt  original_pose.txt  original_pose_e.txt  original_pose_g.txt  original_pose_q.txt  original_pose_s.txt  pokemon.txt  prisma.txt  setonohanayome.txt  starrail.txt  stellive.txt  vocaloid.txt  wutheringwaves.txt
wildcards/presets/: portrait_clean.txt
(+5 files in other folders)
